# RTT-MDK-MiniF4

./: .config  .gitignore  CMakeLists.txt  README.md  SConstruct  keilclean.lnk  project.uvoptx  project.uvprojx  rtconfig.h  template.uvoptx  template.uvprojx
applications/: main.c
board/: board.c  board.h
board/CubeMX_Config/: CubeMX_Config.ioc
board/board_drivers/spi_flash_w25q64/: drv_hw_spi_flash.c  drv_soft_spi_flash.c
board/ports/: fal_cfg.h  fal_spi_flash_sfud_port.c
config/: daplink.cfg
hal/: SConscript  hal.c  hal.h  hal_button.c  hal_config.h  hal_def.h
hal/board_drivers/: SConscript
libraries/: Kconfig
libraries/HAL_Drivers/: drv_gpio.c
offline_pkgs/: Kconfig  SConscript
offline_pkgs/MultiButton/: SConscript  multi_button.c  multi_button.h
rt-thread/components/finsh/: cmd.c  msh.c
stm32f411ceu6/: .config  .gitignore  CMakeLists.txt  Kconfig  SConstruct  project.uvoptx  project.uvprojx  rtconfig.h
stm32f411ceu6/board/: Kconfig  SConscript
stm32f411ceu6/board/CubeMX_Config/: .mxproject
stm32f411ceu6/board/CubeMX_Config/Src/: main.c
stm32f411ceu6/board/ports/: SConscript  fal_cfg.h
stm32f411ceu6/hal/: hal.c  hal.h  hal_button.c
